img/IISI/mbms-morder-feature/iisi-deploy-dualvalidateservice.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: dualvalidateservice
  namespace: mbms-morder-feature
  labels:
    app: dualvalidateservice
    version: m5
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dualvalidateservice
  template:
    metadata:
      labels:
        app: dualvalidateservice
        version: m5
      annotations:
        prometheus.io/path: /actuator/prometheus
        prometheus.io/port: '8080'
        prometheus.io/scheme: http
        prometheus.io/scrape: 'true'
        sidecar.istio.io/inject: 'true'
    spec:
      containers:
      - name: dualvalidateservice
        image: >-
          image-registry.openshift-image-registry.svc:5000/d210641/dual-validate:latest
        imagePullPolicy: Always
        livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 40
            timeoutSeconds: 5
            periodSeconds: 20
            successThreshold: 1
            failureThreshold: 5
        readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 40
            timeoutSeconds: 5
            periodSeconds: 20
            successThreshold: 1
            failureThreshold: 5
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: compares-data
          mountPath: /app/comparelogs
        resources:
          requests: 
            memory: 1Gi
            cpu: 500m
          limits: 
            memory: 1536Mi
            cpu: "1"
      volumes:
      - name: compares-data
        persistentVolumeClaim:
          claimName: dualvalidateservice-data
