img/IISI/mbms-morder-feature/iisi-svc-dualvalidateservice.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dualvalidateservice
    service: dualvalidateservice
  name: dualvalidateservice
  namespace: mbms-morder-feature
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: dualvalidateservice
  sessionAffinity: None
  type: ClusterIP
