img/IISI/mbms-morder-feature/iisi-vs-dualvalidateservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dualvalidateservice-vs
  namespace: mbms-morder-feature
spec:
  hosts: 
  - '*' # invalid: domain name "morder-qa/*" invalid (label "morder-qa/*" invalid)
  gateways:
  - dualvalidateservice-gateway
  #- mesh #applies to all the sidecars in the mesh
  http:
  - match:
    - uri:
        prefix: /cht/validate
    route:
    - destination:    
        host: dualvalidateservice #對應 Anthos GKE sevice name
        port:
          number: 8080
    timeout: 180s
